--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-#htmlcov/
+htmlcov/
 .tox/
 .nox/
 .coverage
@@ -173,3 +173,4 @@ cython_debug/
 # Logs
 logs/
 # ignore Python cache
+/htmlcov/
